# CLSLP

./: BUILD_ALL  BuildAllLog.txt  CLEAN_ALL  LICENSE  README.md  README.txt
CLSLP/: BUILD_ALL  CLEAN  CLSLP.cpp  CLSLP.h  CMakeLists.txt  GENERATE_PLOTS  Plot_Amp.gpl  Plot_Phase.gpl  Start.cpp
CLSLP/avx_support/: AlignedMemAlloc.h
DOCS/: GENERATE_FINAL_PDF  LinearPhaseFilterSegments.wxmx
DOCS/CLSLP Description Doc/: AlignedMemAlloc.h  CLSLP.cpp  CLSLP.h  Constrained Least-Squares FIR Filter Synthesis.odt  FuilterDefs.txt
OTHER_CLSLP_EXAMPLES/: BUILD_ALL  CLEAN_ALL
OTHER_CLSLP_EXAMPLES/Filter_1_eExp_RelErr_mid_seg/: BUILD_ALL  CLSLP.cpp  CLSLP.h  Plot_Amp.gpl  Plot_Phase.gpl  README.txt  Start.cpp
OTHER_CLSLP_EXAMPLES/Filter_2_eExp_AbsErr_mid_seg/: BUILD_ALL  CLSLP.cpp  CLSLP.h  CMakeLists.txt  Plot_Amp.gpl  Plot_Phase.gpl  Start.cpp
OTHER_CLSLP_EXAMPLES/Filter_3_eLin_RelErr_mid_seg/: BUILD_ALL  CLSLP.cpp  CLSLP.h  Plot_Amp.gpl  Plot_Phase.gpl  Start.cpp
OTHER_CLSLP_EXAMPLES/Filter_4_eLin_AbsErr_mid_seg/: BUILD_ALL  BUILD_AND_RUN  CLSLP.cpp  CLSLP.h  CMakeLists.txt  Plot_Amp.gpl  Plot_Phase.gpl  Start.cpp
OTHER_CLSLP_EXAMPLES/Filter_5_Complex_Type 2049 pt/: BUILD_ALL  CLEAN  CLSLP.cpp  CLSLP.h  Filter_5_Complex_Type  Plot_Amp.gpl  Plot_Phase.gpl  Start.cpp
OTHER_CLSLP_EXAMPLES/Filter_5_Complex_Type 2049 pt/avx_support/: AlignedMemAlloc.h
OTHER_CLSLP_EXAMPLES/Filter_6_Complex_Type 1024 pt/: BUILD_ALL  CLEAN  CLSLP.cpp  CLSLP.h  Filter_6_Complex_Type  Plot_Amp.gpl  Plot_Phase.gpl  Start.cpp
